// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkBaselineImageExists > should auto-save baseline when file does not exist and autoSaveBaseline is true 1`] = `
[
  [
    "[33m%s[0m",
    "
#####################################################################################
 INFO:
 Autosaved the image to
 /path/to/baseline.png
#####################################################################################",
  ],
]
`;

exports[`checkBaselineImageExists > should update baseline when updateBaseline is true 1`] = `
[
  [
    "[33m%s[0m",
    "
#####################################################################################
 INFO:
 Updated the actual image to
 /path/to/baseline.png
#####################################################################################",
  ],
]
`;
